# Postrs

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/rest/: mod.rs
test-server/: Cargo.toml  README.md
test-server/src/: main.rs
